GdkWin32: Pass the right arguments when calling modal_timer_proc directly

Fixes https://gitlab.gnome.org/GNOME/gtk/-/issues/7075